--- a/timecloud.config
+++ b/timecloud.config
@@ -309,7 +309,7 @@ CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 # CONFIG_ALL_NONSHARED is not set
 # CONFIG_ALL_KMODS is not set
 # CONFIG_ALL is not set
-CONFIG_BUILDBOT=y
+# CONFIG_BUILDBOT is not set
 CONFIG_SIGNED_PACKAGES=y
 CONFIG_SIGNATURE_CHECK=y
 
@@ -1744,15 +1744,16 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_TAB_COMPLETION=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_FANCY_PROMPT=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_WINCH is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_ASK_TERMINAL is not set
-# CONFIG_BUSYBOX_CONFIG_LOCALE_SUPPORT is not set
+CONFIG_BUSYBOX_CONFIG_LOCALE_SUPPORT=y
 CONFIG_BUSYBOX_CONFIG_UNICODE_SUPPORT=y
+# CONFIG_BUSYBOX_CONFIG_UNICODE_USING_LOCALE is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_CHECK_UNICODE_IN_ENV=y
 CONFIG_BUSYBOX_CONFIG_SUBST_WCHAR=0
 CONFIG_BUSYBOX_CONFIG_LAST_SUPPORTED_WCHAR=0
-# CONFIG_BUSYBOX_CONFIG_UNICODE_COMBINING_WCHARS is not set
-# CONFIG_BUSYBOX_CONFIG_UNICODE_WIDE_WCHARS is not set
+CONFIG_BUSYBOX_CONFIG_UNICODE_COMBINING_WCHARS=y
+CONFIG_BUSYBOX_CONFIG_UNICODE_WIDE_WCHARS=y
 # CONFIG_BUSYBOX_CONFIG_UNICODE_BIDI_SUPPORT is not set
-# CONFIG_BUSYBOX_CONFIG_UNICODE_PRESERVE_BROKEN is not set
+CONFIG_BUSYBOX_CONFIG_UNICODE_PRESERVE_BROKEN=y
 # end of Settings
 
 #
@@ -2573,7 +2574,7 @@ CONFIG_PACKAGE_dnsmasq_full_ipset=y
 # CONFIG_PACKAGE_dnsmasq_full_conntrack is not set
 # CONFIG_PACKAGE_dnsmasq_full_noid is not set
 # CONFIG_PACKAGE_dnsmasq_full_broken_rtc is not set
-# CONFIG_PACKAGE_dnsmasq_full_tftp is not set
+CONFIG_PACKAGE_dnsmasq_full_tftp=y
 CONFIG_PACKAGE_dropbear=y
 
 #
@@ -3240,8 +3241,8 @@ CONFIG_PACKAGE_kmod-nls-cp437=y
 # CONFIG_PACKAGE_kmod-nls-cp862 is not set
 # CONFIG_PACKAGE_kmod-nls-cp864 is not set
 # CONFIG_PACKAGE_kmod-nls-cp866 is not set
-# CONFIG_PACKAGE_kmod-nls-cp932 is not set
-# CONFIG_PACKAGE_kmod-nls-cp936 is not set
+CONFIG_PACKAGE_kmod-nls-cp932=y
+CONFIG_PACKAGE_kmod-nls-cp936=y
 CONFIG_PACKAGE_kmod-nls-cp950=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 # CONFIG_PACKAGE_kmod-nls-iso8859-13 is not set
